--- a/paginas/guitar.html
+++ b/paginas/guitar.html
@@ -1,45 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">    <link rel="stylesheet" href="../css/style.css">
-    <title>GUITAR</title>
-    
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>GUITAR</title> 
 </head>
-<body>
-     <header>                
-          <nav class="LogoSim" >
-              <h1>Simbox Music</h1>
-              <h2>Musical Institute</h2>    
-          </nav>
-      </header> 
-      <main>
-          <div class="MainMenu">
-              <a href="../index.html">INICIO</a>
-              <a href="./guitar.html">GUITAR</a>
-              <a href="./piano.html">PIANO</a>
-              <a href="./voice.html">VOICE</a>
-              <a href="./wind.html">WIND</a>
-              <a href="./percusion.html">PERCUSION</a>     
-              <a href="./strings.html">STRINGS</a>
-          </div>
-      </main> 
-     <img src="../media/istockphoto-1137140710-612x612.jpg" alt="">
-     <hr>
-     <div class="contact">
-          <a href="./paginas/contacto.html">CONTACTO</a>
-     </div>
-     <br>
-     <footer>
-          <ul>
-               <li><a href="https://www.instagram.com/"><img src="../media/instagramvector-partikusi-design-seeklogo.com.svg" alt="LOGO Insta" height="20px">Instagram</a></li>
-               <li><a href="https://www.youtube.com/"><img src="../media/YouTube-Icon-Full-Color-Logo.wine.svg" alt="LOGO ytb" height="20px">Youtube</a></li>
-               <li><a href="https://twitter.com/"><img src="../media/twitter-seeklogo.com.svg" alt="LOGO Twit" height="20px">Twitter</a></li>
-          </ul>
-     </footer>
+<body class="fondo">
+    <header>
+        <div class="LogoSim">
+            <h1>Simbox Music</h1>
+            <h2>Musical Institute</h2>
+        </div>
+    </header>
+    <main>
+        <div class="MainMenu">
+            <a href="../index.html">INICIO</a>
+            <a href="./guitar.html">GUITAR</a>
+            <a href="./piano.html">PIANO</a>
+            <a href="./voice.html">VOICE</a>
+            <a href="./wind.html">WIND</a>
+            <a href="./percusion.html">PERCUSION</a>     
+            <a href="./strings.html">STRINGS</a>
+        </div>
+        <div class="card mb-3" style="max-width: 100%;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="../media/guitarrax.jpg" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">GUITARRA</h5>
+                        <p class="card-text">La guitarra es un instrumento musical de la familia de los cordófonos, es decir los instrumentos que producen su sonido al hacer vibrar las cuerdas. Es un instrumento de cuerda pulsada, compuesto de una caja de resonancia, un mástil sobre el que va adosado el diapasón o trastero —generalmente con un agujero acústico en el centro de la tapa (boca)— y seis cuerdas. Sobre el diapasón van incrustados los trastes, que permiten dividir el continuo de sonidos en las 12 notas del sistema tonal, haciendo posible la interpretación de las mismas con mayor facilidad.
+
+                            La guitarra es el fruto de siglos de evolución de estos cordófonos. Los orígenes del instrumento proceden de civilizaciones de Asia menor (sumerios, acadios, asirios...) de. 2.500 A.C. Desde entonces los cordófonos se han desarrollado de muy diversas maneras a lo largo del tiempo con diferentes números de cuerdas y formas. Algunos instrumentos de la familia son el cuatro, el ukelele, el requinto, el charango y distintos tipos de guitarrón, como el guitarrón mexicano, de uso frecuente por los mariachis.
+                            
+                            La guitarra tal y como la conocemos hoy es la heredera del instrumento que ideó Antonio de Torres, constructor almeriense que sentó los cánones y proporciones actuales. La guitarra es hoy un instrumento polifacético que se usa tanto en la música clásica como en las músicas populares. En su versión electrificada es el instrumento más utilizado en géneros como blues, rock y heavy metal. También es la protagonista en las músicas populares de raíces de España y Latinoamérica. Cabe destacar la importancia que la guitarra tiene en el flamenco, género musical que nace en España durante el siglo XVIII. En la actualidad los guitarristas flamencos suelen usar una guitarra con ligeras variaciones en la construcción,conocida como guitarra de flamenco. La guitarra clásica es también bastante frecuente entre los cantautores..</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <hr>
+    <div class="contact">
+        <a href="./paginas/contacto.html">CONTACTO</a>
+    </div>
+    <br>
+    <footer>
+        <ul>
+            <li><a href="https://www.instagram.com/"><img
+                        src="../media/instagramvector-partikusi-design-seeklogo.com.svg" alt="LOGO Insta"
+                        height="20px">Instagram</a></li>
+            <li><a href="https://www.youtube.com/"><img src="../media/YouTube-Icon-Full-Color-Logo.wine.svg"
+                        alt="LOGO ytb" height="20px">Youtube</a></li>
+            <li><a href="https://twitter.com/"><img src="../media/twitter-seeklogo.com.svg" alt="LOGO Twit"
+                        height="20px">Twitter</a></li>
+        </ul>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
