--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -31,7 +31,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"></h5>
                                 <p class="card-text"></p>
-                                <a href="./paginas/guitar.html" class="btn btn-primary">GUITARRA</a>
+                                <a href="./paginas/guitar.html" class="btn btn-outline-dark">GUITARRA</a>
                             </div>
                         </div>
                         <!-- piano -->
@@ -40,7 +40,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"></h5>
                                 <p class="card-text"></p>
-                                <a href="./paginas/piano.html" class="btn btn-primary">PIANO</a>
+                                <a href="./paginas/piano.html" class="btn btn-outline-dark">PIANO</a>
                             </div>
                         </div>
                         <!-- percusion -->
@@ -49,7 +49,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"></h5>
                                 <p class="card-text"></p>
-                                <a href="./paginas/percusion.html" class="btn btn-primary">PERCUSION</a>
+                                <a href="./paginas/percusion.html" class="btn btn-outline-dark">PERCUSION</a>
                             </div>
                         </div>
                     </div>
@@ -60,7 +60,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"></h5>
                                 <p class="card-text"></p>
-                                <a href="./paginas/strings.html" class="btn btn-primary">CUERDAS</a>
+                                <a href="./paginas/strings.html" class="btn btn-outline-dark">CUERDAS</a>
                             </div>
                         </div>
                         <!-- voz -->
@@ -69,7 +69,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"></h5>
                                 <p class="card-text"></p>
-                                <a href="./paginas/voice.html" class="btn btn-primary">MICROFONO</a>
+                                <a href="./paginas/voice.html" class="btn btn-outline-dark">MICROFONO</a>
                             </div>
                         </div>
                         <!-- viento -->
@@ -78,7 +78,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"></h5>
                                 <p class="card-text"></p>
-                                <a href="./paginas/wind.html" class="btn btn-primary">VIENTO</a>
+                                <a href="./paginas/wind.html" class="btn btn-outline-dark">VIENTO</a>
                             </div>
                         </div>
                     </div>
