--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -1,41 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>CONTACTO</title>
+    <title>GUITAR</title> 
 </head>
-<body>
-    <header>                
-        <nav class="LogoSim" >
+<body class="fondo">
+    <header>
+        <div class="LogoSim">
             <h1>Simbox Music</h1>
-            <h2>Musical Institute</h2>    
-        </nav>
-    </header> 
+            <h2>Musical Institute</h2>
+        </div>
+    </header>
     <main>
         <div class="MainMenu">
-            <a href="../index.html">INICIO</a>
-            <a href="./guitar.html">GUITAR</a>
-            <a href="./piano.html">PIANO</a>
-            <a href="./voice.html">VOICE</a>
-            <a href="./wind.html">WIND</a>
-            <a href="./percusion.html">PERCUSION</a>     
-            <a href="./strings.html">STRINGS</a>
+            <ul class="nav nav-pills nav-justified">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../paginas/piano.html">piano</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../paginas/percusion.html">percusion</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../paginas/strings.html">cuerdas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../paginas/voice.html">canto</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../paginas/wind.html">viento</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../paginas/contacto.html">contacto</a>
+              </ul>
         </div>
     </main> 
     <hr>
     <br><br><br>
-    <form action="" method="get" enctype="text/plain" >
-        <label for="userName">Nombre</label>
-        <input type="text" Id="userName" > 
-        <label for="UserPsw">Contraseña</label>
-        <input type="password" id="UserPsw">
-        <button>Enviar</button>
+    <form class="Formu">
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Email</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1">Dejanos tu mensaje</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
     </form>
     <hr>
      <div class="contact">
