--- a/paginas/strings.html
+++ b/paginas/strings.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,34 +8,62 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>STRINGS</title>
+    <title>GUITAR</title> 
 </head>
-<body>
-    <header>                
-        <nav class="LogoSim" >
+<body class="fondo">
+    <header>
+        <div class="LogoSim">
             <h1>Simbox Music</h1>
-            <h2>Musical Institute</h2>    
-        </nav>
-    </header> 
+            <h2>Musical Institute</h2>
+        </div>
+    </header>
     <main>
         <div class="MainMenu">
-            <a href="../index.html">INICIO</a>
-            <a href="./guitar.html">GUITAR</a>
-            <a href="./piano.html">PIANO</a>
-            <a href="./voice.html">VOICE</a>
-            <a href="./wind.html">WIND</a>
-            <a href="./percusion.html">PERCUSION</a>     
-            <a href="./strings.html">STRINGS</a>
+            <ul class="nav nav-pills nav-justified">
+                <li class="nav-item">
+                  <a class="nav-link" href="../index.html">inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../paginas/guitar.html">guitarra</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../paginas/percusion.html">percusion</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../paginas/piano.html">piano</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../paginas/voice.html">canto</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../paginas/wind.html">viento</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../paginas/contacto.html">contacto</a>
+              </ul>
+        </div>
+        <div class="card mb-3" style="max-width: 100%;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="../media/Cuerdas.jpg" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">CUERDAS</h5>
+                        <p class="card-text">Los instrumentos de cuerda o cordófonos son instrumentos musicales que producen sonidos por medio de las vibraciones de una o más cuerdas, usualmente amplificadas por medio de una caja de resonancia. Estas cuerdas están tensadas entre dos puntos del instrumento y se hacen sonar pulsando, frotando o percutiendo la cuerda
+
+
+                            Instrumentos musicales de cuerda en el Museo de Arte Popular de la Ciudad de México
+                            En la orquesta clásica, se llama cuerdas al conjunto de instrumentos de cuerda frotada formado por los grupos de violines (normalmente divididos en violines primeros y segundos), violas, violonchelos y contrabajos. Lo mismo sucede con la orquesta de cuerdas, que está conformada por los mismos instrumentos. De forma similar se habla de un trío, cuarteto o quinteto de cuerdas, cuando se trata de agrupaciones de violín, viola y violonchelo.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main> 
-    <div class="imtxflex">
-        <img class="imgtext" src="../media/EmbNavAc_Strings_c_720x300.jpg" alt="">
-        <article class="artmrg">
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem tempora odit placeat earum fugit iure molestias nostrum porro dolore eum adipisci at ad id doloribus praesentium ab architecto doloremque distinctio ex hic vel, asperiores assumenda neque ipsum. Aspernatur maxime praesentium repellendus distinctio est consectetur ullam exercitationem inventore, dolore dolores! Facilis nemo laudantium eius tenetur, ullam in odio accusamus velit minima itaque, placeat asperiores ut, iste labore dolore?
-            </p>
-        </article>
-    </div>
     <hr>
      <div class="contact">
           <a href="./paginas/contacto.html">CONTACTO</a>
@@ -47,5 +76,8 @@
                <li><a href="https://twitter.com/"><img src="../media/twitter-seeklogo.com.svg" alt="LOGO Twit" height="20px">Twitter</a></li>
           </ul>
      </footer>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
 </html>
