--- a/paginas/wind.html
+++ b/paginas/wind.html
@@ -1,35 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="../css/style.css">
-     <title>WIND</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>GUITAR</title> 
 </head>
-<body>
-     <header>                
-          <nav class="LogoSim" >
-              <h1>Simbox Music</h1>
-              <h2>Musical Institute</h2>    
-          </nav>
-     </header> 
-     <main>
-          <div class="MainMenu">
-              <a href="../index.html">INICIO</a>
-              <a href="./guitar.html">GUITAR</a>
-              <a href="./piano.html">PIANO</a>
-              <a href="./voice.html">VOICE</a>
-              <a href="./wind.html">WIND</a>
-              <a href="./percusion.html">PERCUSION</a>     
-              <a href="./strings.html">STRINGS</a>
+<body class="fondo">
+    <header>
+        <div class="LogoSim">
+            <h1>Simbox Music</h1>
+            <h2>Musical Institute</h2>
+        </div>
+    </header>
+    <main>
+     <div>
+          <ul class="nav nav-pills nav-justified">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/guitar.html">guitarra</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/percusion.html">percusion</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/piano.html">piano</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/voice.html">canto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/voice.html">voz</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/contacto.html">contacto</a>
+            </ul>
+      </div>
+      <div class="card mb-3" style="max-width: 100%;">
+          <div class="row g-0">
+              <div class="col-md-4">
+                  <img src="../media/Viento.jpg" class="img-fluid rounded-start" alt="...">
+              </div>
+              <div class="col-md-8">
+                  <div class="card-body">
+                      <h5 class="card-title">VIENTO</h5>
+                      <p class="card-text">LLos instrumentos de viento o aerófonos son una familia de instrumentos musicales los cuales producen el sonido por la vibración del contenido de aire en su interior, sin necesidad de cuerdas o membranas porque solo requiere de la vibración del aire. Los aerófonos de metal producen un sonido de timbre fuerte. En este caso, el músico hace vibrar sus labios en una boquilla que genera la frecuencia acústica. Entre los aerófonos de metal podemos nombrar a la trompeta, la tuba y el trombón, entre otros.</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+              </div>
           </div>
+      </div>
      </main>
      <hr>
-     <img src="../media/depositphotos_44840961-stock-photo-blowing-brass-wind-instrument-on.jpg" alt="">
      <hr>
      <div class="contact">
           <a href="./paginas/contacto.html">CONTACTO</a>
@@ -42,5 +73,8 @@
                <li><a href="https://twitter.com/"><img src="../media/twitter-seeklogo.com.svg" alt="LOGO Twit" height="20px">Twitter</a></li>
           </ul>
      </footer>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
 </html>
