--- a/paginas/wind.html
+++ b/paginas/wind.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <main>
-     <div>
+     <div class="MainMenu">
           <ul class="nav nav-pills nav-justified">
               <li class="nav-item">
                 <a class="nav-link" href="../index.html">inicio</a>
