arreglo de grid responsive con boodstrap

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <main>
             <nav>
                 <div>
-                    <div class="row">
+                    <div class="row justify-content-around">
                         <!-- guitarra -->
-                        <div class="card col-sm-2 offset-sm-1" style="width: 18rem;">
+                        <div class="card col-4" style="width: 18rem;">
                             <img src="media/guitarra.jpg" class="card-img-top" alt="GUITARRITA">
                             <div class="card-body">
                                 <h5 class="card-title"></h5>
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                         <!-- piano -->
-                        <div class="card col-sm-2 offset-sm-2" style="width: 18rem;">
+                        <div class="card col-4" style="width: 18rem;">
                             <img src="media/piano.jpg" class="card-img-top" alt="PIANO">
                             <div class="card-body">
                                 <h5 class="card-title"></h5>
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                         <!-- percusion -->
-                        <div class="card col-sm-2 offset-sm-2" style="width: 18rem;">
+                        <div class="card col-4" style="width: 18rem;">
                             <img src="media/Percusiones.jpg" class="card-img-top" alt="PERCUSION">
                             <div class="card-body">
                                 <h5 class="card-title"></h5>
@@ -53,9 +53,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row justify-content-around">
                         <!-- violin -->
-                        <div class="card col-sm-2 offset-sm-1" style="width: 18rem;">
+                        <div class="card col-4" style="width: 18rem;">
                             <img src="media/Cuerdas.jpg" class="card-img-top" alt="CUERDAS">
                             <div class="card-body">
                                 <h5 class="card-title"></h5>
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                         <!-- voz -->
-                        <div class="card col-sm-2 offset-sm-2" style="width: 18rem;">
+                        <div class="card col-4" style="width: 18rem;">
                             <img src="media/Canto.jpg" class="card-img-top" alt="MICROFONO">
                             <div class="card-body">
                                 <h5 class="card-title"></h5>
@@ -73,7 +73,7 @@
                             </div>
                         </div>
                         <!-- viento -->
-                        <div class="card col-sm-2 offset-sm-2" style="width: 18rem;">
+                        <div class="card col-4" style="width: 18rem;">
                             <img src="media/Viento.jpg" class="card-img-top" alt="VIENTO">
                             <div class="card-body">
                                 <h5 class="card-title"></h5>
@@ -87,7 +87,7 @@
         </main>
         <hr>
         <div class="contact">
-            <a href="./paginas/contacto.html">CONTACTO</a>
+            <button type="button" class="btn btn-outline-dark">contacto</button>
         </div>
 
     </section>
