--- a/paginas/percusion.html
+++ b/paginas/percusion.html
@@ -69,9 +69,9 @@
         </div>
     </main> 
     <hr>
-     <div class="contact">
-          <a href="./paginas/contacto.html">CONTACTO</a>
-     </div>
+    <div class="contact">
+      <button type="button" class="btn btn-outline-dark">contacto</button>
+    </div>
      <br>
      <footer>
           <ul>
