--- a/paginas/wind.html
+++ b/paginas/wind.html
@@ -63,7 +63,7 @@
      <hr>
      <hr>
      <div class="contact">
-          <a href="./paginas/contacto.html">CONTACTO</a>
+      <button type="button" class="btn btn-outline-dark">contacto</button>
      </div>
      <br>
      <footer>
