--- a/paginas/guitar.html
+++ b/paginas/guitar.html
@@ -68,7 +68,7 @@
 
     <hr>
     <div class="contact">
-        <a href="./paginas/contacto.html">CONTACTO</a>
+        <button type="button" class="btn btn-outline-dark">contacto</button>
     </div>
     <br>
     <footer>
