--- a/paginas/voice.html
+++ b/paginas/voice.html
@@ -74,7 +74,7 @@
       </main> 
      <hr>
      <div class="contact">
-          <a href="./paginas/contacto.html">CONTACTO</a>
+      <button type="button" class="btn btn-outline-dark">contacto</button>
      </div>
      <br>
      <footer>
