--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
     <link rel="stylesheet" href="./sass/main.css">
     <title>SIMBOX MUSIC</title>
 </head>
-<body class="fondo">
+<body>
     <header>
         <div class="header__LogoSim">
             <h1>Simbox Music</h1>
             <h2>Musical Institute</h2>
         </div>
+        <div class="header__LogoSim--intro">
+            <h3> Lo invitamos a conocer la forma más divertida de acercarse a la musica, 
+                con un nombre que es sinónimo de vanguardia en enseñanza musical en todo el mundo. 
+                 Llevamos décadas despertando el gusto por el instrumento.</h3>
+        </div>
+        <br><br>
     </header>
     <section>
         <main>
@@ -95,7 +101,7 @@
     <br>
     <hr>
     <footer>
-        <ul>
+        <ul class="footer">
             <li><a href="https://www.instagram.com/"><img
                         src="./media/instagramvector-partikusi-design-seeklogo.com.svg" alt="LOGO Insta"
                         height="20px">Instagram</a></li>
