--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -2,70 +2,113 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../sass/main.css">
-    <title>GUITAR</title> 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link rel="stylesheet" href="../sass/main.css">
+  <title>GUITAR</title>
 </head>
+
 <body class="fondo">
-    <header>
-        <div class="header__LogoSim">
-            <h1>Simbox Music</h1>
-            <h2>Musical Institute</h2>
-        </div>
-    </header>
-    <main>
-        <div class="main__menu">
-            <ul class="nav nav-pills nav-justified">
-                <li class="nav-item">
-                  <a class="nav-link" href="../index.html">inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../paginas/piano.html">piano</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../paginas/percusion.html">percusion</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../paginas/strings.html">cuerdas</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../paginas/voice.html">canto</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../paginas/wind.html">viento</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../paginas/contacto.html">contacto</a>
-              </ul>
-        </div>
-    </main> 
-    <hr>
-    <br><br><br>
-    <form class="Formu">
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Email</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-        </div>
-        <div class="form-group">
-            <label for="exampleFormControlTextarea1">Dejanos tu mensaje</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-    </form>
-    <hr>
-     <br>
-     <footer>
-          <ul>
-               <li><a href="https://www.instagram.com/"><img src="../media/instagramvector-partikusi-design-seeklogo.com.svg" alt="LOGO Insta" height="20px">Instagram</a></li>
-               <li><a href="https://www.youtube.com/"><img src="../media/YouTube-Icon-Full-Color-Logo.wine.svg" alt="LOGO ytb" height="20px">Youtube</a></li>
-               <li><a href="https://twitter.com/"><img src="../media/twitter-seeklogo.com.svg" alt="LOGO Twit" height="20px">Twitter</a></li>
-          </ul>
-     </footer>
- </body>
+  <header>
+    <div class="header__LogoSim">
+      <h1>Simbox Music</h1>
+      <h2>Musical Institute</h2>
+    </div>
+  </header>
+  <main>
+    <div class="main__menu">
+      <ul class="nav nav-pills nav-justified">
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../paginas/piano.html">piano</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../paginas/percusion.html">percusion</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../paginas/strings.html">cuerdas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../paginas/voice.html">canto</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../paginas/wind.html">viento</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../paginas/contacto.html">contacto</a>
+      </ul>
+    </div>
+  </main>
+  <hr>
+  <div class="contact_form">
+    <div class="formulario">
+      <h1>¿Te gustaria aprender en nuestra escuela?</h1>
+      <h3>Escríbenos y en breve los pondremos en contacto contigo</h3>
+      <form action="submeter-formulario.php" method="post">
+        <p>
+          <label for="nombre" class="colocar_nombre">Nombre
+            <span class="obligatorio">*</span>
+          </label>
+          <input type="text" name="introducir_nombre" id="nombre" required="obligatorio"
+            placeholder="Escribe tu nombre">
+        </p>
+        <p>
+          <label for="email" class="colocar_email">Email
+            <span class="obligatorio">*</span>
+          </label>
+          <input type="email" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
+        </p>
+        <p>
+          <label for="telefone" class="colocar_telefono">Teléfono
+          </label>
+          <input type="tel" name="introducir_telefono" id="telefono" placeholder="Escribe tu teléfono">
+        </p>
+        <p>
+          <label for="website" class="colocar_website">Redes Sociales
+          </label>
+          <input type="url" name="introducir_website" id="website" placeholder="Escribe la URL de tu web">
+        </p>
+        <p>
+          <label for="asunto" class="colocar_asunto">Asunto
+            <span class="obligatorio">*</span>
+          </label>
+          <input type="text" name="introducir_asunto" id="assunto" required="obligatorio"
+            placeholder="Escribe un asunto">
+        </p>
+        <p>
+          <label for="mensaje" class="colocar_mensaje">Mensaje
+            <span class="obligatorio">*</span>
+          </label>
+          <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio"
+            placeholder="Deja aquí tu comentario..."></textarea>
+        </p>
+        <button type="submit" name="enviar_formulario" id="enviar">
+          <p>Enviar</p>
+        </button>
+        <p class="aviso">
+          <span class="obligatorio"> * </span>los campos son obligatorios.
+        </p>
+      </form>
+      <hr>
+      <br>
+      <footer>
+        <ul>
+          <li><a href="https://www.instagram.com/"><img src="../media/instagramvector-partikusi-design-seeklogo.com.svg"
+                alt="LOGO Insta" height="20px">Instagram</a></li>
+          <li><a href="https://www.youtube.com/"><img src="../media/YouTube-Icon-Full-Color-Logo.wine.svg"
+                alt="LOGO ytb" height="20px">Youtube</a></li>
+          <li><a href="https://twitter.com/"><img src="../media/twitter-seeklogo.com.svg" alt="LOGO Twit"
+                height="20px">Twitter</a></li>
+        </ul>
+      </footer>
+</body>
+
 </html>
