--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <main>
             <nav>
                 <div>
+                    <!-- instrumentos -->
                     <div class="row justify-content-around">
                         <!-- guitarra -->
                         <div class="card col-4" style="width: 18rem;">
@@ -96,7 +97,10 @@
         <div class="contact">
             <a href="./paginas/contacto.html" class="btn btn-secondary btn-lg active" role="button" >contacto</a>
         </div>
+
     </section>
+
+    <hr>
     <footer>
         <ul class="footer">
             <li><a href="https://www.instagram.com/"><img
